<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.ikm.tinkar</groupId>
    <artifactId>starter-data-builder</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <tinkar-core.version>1.67.0</tinkar-core.version>
        <tinkar-schema.version>1.27.0</tinkar-schema.version>
        <tinkar-transformer-api.version>1.7.0</tinkar-transformer-api.version>
        <java-uuid-generator.version>4.3.0</java-uuid-generator.version>
        <jackson-databind.version>2.14.2</jackson-databind.version>
        <slf4j.version>2.0.13</slf4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>dev.ikm.tinkar.ext.owl</groupId>
            <artifactId>owl-extension</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>data-ephemeral-provider</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>coordinate</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>data-spinedarray-provider</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>entity-provider</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>executor-provider</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>search-provider</artifactId>
            <version>${tinkar-core.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>tinkar-schema</artifactId>
            <version>${tinkar-schema.version}</version>
        </dependency>

        <!--<dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>tinkar-transformer-api</artifactId>
            <version>${tinkar-transformer-api.version}</version>
        </dependency>-->

        <!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
        <dependency>
            <groupId>com.fasterxml.uuid</groupId>
            <artifactId>java-uuid-generator</artifactId>
            <version>${java-uuid-generator.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson-databind.version}</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.jpms</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>3.22.0-r5</version>
        </dependency>

        <dependency>
            <groupId>dev.ikm.jpms</groupId>
            <artifactId>activej-common</artifactId>
            <version>4.3-r5</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
<!--            <scope>test</scope>-->
        </dependency>
    </dependencies>
</project>